--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ div .block{
 
 
 <div>
-<p class=t>万科城五期维权 - 微博效果</p>
+<p class=t>万科城五期维权 - 微博效果(目前没有建任何群)</p>
 <p>站在一般民众和买房者的角度，搜微博关键词：
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">万科</a> |
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E&Refer=STopic_box">万科城</a> |
@@ -36,7 +36,7 @@ div .block{
 <div class=block>
 不要被 透明屋 那篇公众号洗脑！请认清现实问题：<br>
 <br>
-各种群里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
+各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
 拖延到交房后，是水军们的考核目标。交房后开发商就跑了，业主就是和物业交涉了，斗争会很不直接，更困难！<br>
 </div>
 
@@ -104,7 +104,13 @@ div .block{
 	所以要齐心协力上热搜，需要持续发帖，持续转发和评论。<br>
 7.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
 雪崩了，没有一片雪花认为自己有责任。<br>
+<br>
 
+<div class=block>
+	安居客，链家网，房天下....都发发<br>
+	特别是外地的，力所能及的每天发几个微博，做几个评论，别啥都不干<br>
+	对，为万科做一辈子免费“广告”，每一天！<br>
+</div>
 <br>
 
 
@@ -117,9 +123,9 @@ div .block{
 3.把问题和万科品牌名直接关联;<br>
 4.最终对新楼盘潜在买家给出万科1-5期期期维权的事实，让购房者参考，<br>
 	站在新买家的角度搜索微博关键词，检查曝光效果；<br>
-	万科宣传啥，我们用啥关键词，死死绑定万科，为万科做免费“广告”<br>
+	万科宣传啥，我们用啥关键词，死死绑定万科，<span class=red>为万科天天做免费“广告”一辈子！</span><br>
 	和任何正在流行的关键词关联，如#世界杯#<br>
-最终达到 垃圾中转站 拆除的效果。否则什么停用都是骗人的。<br>
+最终达到 垃圾中转站 拆除等效果。否则什么关闭、暂时停用都是骗人的。<br>
 <br>
 
 
