--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ div .block{
 
 
 <div>
-<p class=t>万科城五期维权 - 微博效果(目前没有建任何群)</p>
+<p class=t>万科城五期维权 - 微博效果</p>
+<p class=block>本网站由redStone提供技术支持，目前没有建任何群。有任何意见建议和线索请联系 wap314 at 163.com<br>
+请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
+本网站随时可能被敌方屏蔽。请截图保存！
+</p>
 <p>站在一般民众和买房者的角度，搜微博关键词：
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">万科</a> |
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E&Refer=STopic_box">万科城</a> |
@@ -36,7 +40,7 @@ div .block{
 <div class=block>
 不要被 透明屋 那篇公众号洗脑！请认清现实问题：<br>
 <br>
-各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
+各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，要么总是岔开话题，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
 拖延到交房后，是水军们的考核目标。交房后开发商就跑了，业主就是和物业交涉了，斗争会很不直接，更困难！<br>
 </div>
 
@@ -57,7 +61,7 @@ div .block{
 
 <p class=t>微博发帖建议，供参考：</p>
 1.每人一天一条微博，越多人发越好；<br>
-2.实事求是发问题，一个问题一个帖子，不要有字词牵涉政府，事情都是万科做的：<br>
+2.实事求是发问题，一个问题一个帖子，不要有字词牵涉政府，好事都是万科在做：<br>
 要添加1-2个标签，标签可选如下：<br>
 <ul>
 	<li>一定贴上万科的品牌名，如#万科#, #万科城#, 郑州#万科城#, 郑州#万科#城,  #郑州万科城#,</li>
@@ -97,7 +101,9 @@ div .block{
 这是成年人的社会，钱会蔑视和玩弄规则，不要太天真！<br>
 啥都没做jc确实已经抓人了。只有出来告它们了。<br>
 他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
-这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？</p>
+这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
+现场维权，不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。
+</p>
 </div>
 
 6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不关心的。<br>
