--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@ div .block{
 	background:#FFF8DC;
 	padding:5px;
 }
+
+
+
+.footer {
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 15px;
+    text-align: center;
+}
 </style>
 
 
@@ -19,8 +34,9 @@ div .block{
 <p class=t>万科城五期维权 - 微博效果</p>
 <p class=block>本网站由redStone提供技术支持，目前没有建任何群。有任何意见建议和线索请联系 wap314 at 163.com<br>
 请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
-本网站随时可能被敌方屏蔽。请截图保存！
+本网站随时可能被敌方屏蔽。请截图保存！<br>
 </p>
+
 <p>站在一般民众和买房者的角度，搜微博关键词：
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">万科</a> |
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E&Refer=STopic_box">万科城</a> |
@@ -33,6 +49,19 @@ div .block{
 <a target="_balnk", href="">xx</a> |
 -->
 </p>
+
+
+<ul>
+	<li class=red>如果自己搜不到自己的帖子，是因为你的微博权重太低。</li>
+	<li><b>增加权重的方法：</b></li>
+	<li>花钱充个微博会员(非常时刻，别心疼这十几块钱了); </li>
+	<li>多加别人粉丝，让别人也加你; </li>
+	<li>每天发微博或转发热点微博(转发也要评论几句，纯转发被认为没有信息，不会有权重);</li>
+	<li>不要评价政府和领导人;</li> 
+</ul>
+
+
+
 
 
 <p class=t>万科城五期维权原因：</p>
@@ -102,14 +131,17 @@ div .block{
 啥都没做jc确实已经抓人了。只有出来告它们了。<br>
 他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
 这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
-现场维权，不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。
+现场维权，不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。<br>
+<br><br>
+<b>有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
+笑话！你以为你不说买二手房的就不知道你小区有个垃圾场啊！天真。
 </p>
 </div>
 
 6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不关心的。<br>
 	所以要齐心协力上热搜，需要持续发帖，持续转发和评论。<br>
 7.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
-雪崩了，没有一片雪花认为自己有责任。<br>
+<span class=red>雪崩了，没有一片雪花认为自己有责任。</span><br>
 <br>
 
 <div class=block>
@@ -140,4 +172,10 @@ div .block{
 
 
 
-</div>
+
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>Viewed 84593 times.</p>
+      </div>
+    </footer>
