--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<!doctype html>
+<html>
+<head>
+	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.0.5</title>
 <style>
+html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
 .red{color:red;}
 .grey{color:grey;}
@@ -14,11 +19,9 @@ div .block{
 }
 
 
-
 .footer {
     bottom: 0;
     width: 100%;
-    height: 60px;
     background-color: #f5f5f5;
 }
 .container {
@@ -28,15 +31,30 @@ div .block{
     text-align: center;
 }
 </style>
+</head>
 
 
-<div>
-<p class=t>万科城五期维权 - 微博效果</p>
-<p class=block>本网站由redStone提供技术支持，目前没有建任何群。有任何意见建议和线索请联系 wap314 at 163.com<br>
-请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
-本网站随时可能被敌方屏蔽。请截图保存！<br>
+<body>
+<p class=t>哀其不幸，怒其不争</p>
+<p class=block>
+	请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
+	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span><br>
 </p>
 
+<span class=red>今天不努力维权，明天活该住在垃圾山上！特别是1-2号楼上的240户。<br>
+至少先让你们的声音持续在微博上能被搜索到！自己搜，或者下面的链接自己点开看...</span><br>
+媒体报道肯定要受开发商打击，如果业主自己不闻不问，自己都不主动造舆论，民怨不够大，又没有吸引眼球的爆料，媒体凭啥帮你报道？吃饱了撑的？<br>
+用四期一期业主的评价，还是五期业主好欺负，忍辱负重，一盘散沙。<br>
+只有三四十人看到的微博卵用没有，阅读下文，把你的微博阅读量提上去，争取自己的话语权。<br>
+
+
+
+
+
+
+
+
+<p class=t>万科城五期维权 - 微博效果</p>
 <p>站在一般民众和买房者的角度，搜微博关键词：
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">万科</a> |
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E&Refer=STopic_box">万科城</a> |
@@ -59,6 +77,10 @@ div .block{
 	<li>每天发微博或转发热点微博(转发也要评论几句，纯转发被认为没有信息，不会有权重);</li>
 	<li>不要评价政府和领导人;</li> 
 </ul>
+
+
+
+
 
 
 
@@ -88,6 +110,10 @@ div .block{
 
 
 
+
+
+
+
 <p class=t>微博发帖建议，供参考：</p>
 1.每人一天一条微博，越多人发越好；<br>
 2.实事求是发问题，一个问题一个帖子，不要有字词牵涉政府，好事都是万科在做：<br>
@@ -106,9 +132,11 @@ div .block{
 
 <p class=grey>期期维权的#郑州万科城# 终于在7月7号迎来了五期维权，虽然被万科的保安疯狂镇压并抓走几名业主，但还是改变不了#万科# 要在#郑州万科城# 五期小区内建设垃圾中转站的工程进度。期期坑人，你猜猜#郑州# 的#万科城湖心岛# 会怎么玩坑？ ​</p>
 
-
-
 <br>
+
+
+
+
 
 
 
@@ -155,6 +183,10 @@ div .block{
 
 
 
+
+
+
+
 <p class=t>自媒体宣传目标：</p>
 1.实事求是反映问题;<br>
 2.尽力扩大曝光量;<br>
@@ -176,6 +208,16 @@ div .block{
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>Viewed 84593 times.</p>
+        <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
+		本网站由redStone提供技术支持，目前没有建任何群。<br>
+		有任何意见建议和线索请联系 wap314 at 163.com <br>
+		Viewed 84593 times. <br>
+		</p>
       </div>
     </footer>
+	  
+
+
+
+</body>
+</html>
