--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
 .red{color:red;}
+.text-muted,
 .grey{color:grey;}
-li{background:#FFF8DC;padding:5px;}
+li{background:#FFF8DC; padding:3px;}
 ul{border-left:2px solid rgb(255, 235, 142);
 	list-style_type:none;
 	margin:0;
@@ -74,7 +75,7 @@ div .block{
 	<li><b>增加权重的方法：</b></li>
 	<li>花钱充个微博会员(非常时刻，别心疼这十几块钱了); </li>
 	<li>多加别人粉丝，让别人也加你; </li>
-	<li>每天发微博或转发热点微博(转发也要评论几句，纯转发被认为没有信息，不会有权重);</li>
+	<li>每天发微博或转发热点微博(转发也要评论几句，<span class=red>纯转发被认为没有信息，不会有权重</span>);</li>
 	<li>不要评价政府和领导人;</li> 
 </ul>
 
@@ -154,14 +155,15 @@ div .block{
 
 
 <div class=block>
-<p class=red><b>不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
+<p class=red><b>(1). 不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
 这是成年人的社会，钱会蔑视和玩弄规则，不要太天真！<br>
 啥都没做jc确实已经抓人了。只有出来告它们了。<br>
 他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
 这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
-现场维权，不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。<br>
-<br><br>
-<b>有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
+既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。<br>
+
+<br>
+<b>(2). 有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
 笑话！你以为你不说买二手房的就不知道你小区有个垃圾场啊！天真。
 </p>
 </div>
