--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ div .block{
     padding: 15px;
     text-align: center;
 }
+
+.quote{font-family:"微软雅黑"; font-size:150%;}
 </style>
 </head>
 
@@ -203,6 +205,16 @@ div .block{
 
 
 
+<pre class=quote>
+
+
+"We are only as strong as we are united, as weak as we are divided."
+“只有团结一致我们才能强大无比，四分五裂只会让我们软弱无力。”
+	—Albus Dumbledore
+	
+	
+	
+</pre>
 
 
 
