--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.0.5</title>
+	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.0.9</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
@@ -44,7 +44,7 @@ div .block{
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span><br>
 </p>
 
-<span class=red>今天不努力维权，明天活该住在垃圾山上！特别是1-2号楼上的240户。<br>
+<span class=red>今天不努力维权，明天活该住在垃圾山上！特别是1-3号楼上的近400户。<br>
 至少先让你们的声音持续在微博上能被搜索到！自己搜，或者下面的链接自己点开看...</span><br>
 媒体报道肯定要受开发商打击，如果业主自己不闻不问，自己都不主动造舆论，民怨不够大，又没有吸引眼球的爆料，媒体凭啥帮你报道？吃饱了撑的？<br>
 用四期一期业主的评价，还是五期业主好欺负，忍辱负重，一盘散沙。<br>
@@ -78,7 +78,7 @@ div .block{
 	<li>花钱充个微博会员(非常时刻，别心疼这十几块钱了); </li>
 	<li>多加别人粉丝，让别人也加你; </li>
 	<li>每天发微博或转发热点微博(转发也要评论几句，<span class=red>纯转发被认为没有信息，不会有权重</span>);</li>
-	<li>不要评价政府和领导人;</li> 
+	<li>不要评价政府和领导人，特别是高层;</li> 
 </ul>
 
 
@@ -92,7 +92,7 @@ div .block{
 <p class=t>万科城五期维权原因：</p>
 
 <div class=block>
-不要被 透明屋 那篇公众号洗脑！请认清现实问题：<br>
+不要被 透明屋/全民好房 的公众号洗脑！请认清现实问题：<br>
 <br>
 各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，要么总是岔开话题，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
 拖延到交房后，是水军们的考核目标。交房后开发商就跑了，业主就是和物业交涉了，斗争会很不直接，更困难！<br>
@@ -150,19 +150,19 @@ div .block{
 3.向媒体寻求帮助，目前还没有媒体写稿件；<br>
 4.请律师，过程漫长，而且被告都很难选定，少不了踢皮球，可以考虑，但是不要指望；<br>
 5.现场维权，<br>
-	(1)第一次是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部，<br>
-	现场立刻出现大量保安和警察，业主被抓5人，其余被迫解散。<br>
+	(1)第一次是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部很远的地方，<br>
+	现场立刻出现大量保安和警察，业主被抓5人，其余立刻解散。<br>
 	有人推测是假警察，但群里肯定有万科卧底。而且现场业主中也可能有卧底。万科已经开始暴力解决问题了？<br>
-	目前在讨论如何营救被抓业主？<br>
+	要好好研究如何营救被抓业主。<br>
 
 
 <div class=block>
 <p class=red><b>(1). 不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
 这是成年人的社会，钱会蔑视和玩弄规则，不要太天真！<br>
-啥都没做jc确实已经抓人了。只有出来告它们了。<br>
+啥都没做jc确实已经抓人了。想想怎么防御吧。<br>
 他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
 这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
-既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要好好考虑。<br>
+既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要仔细研究，学习其他地市楼盘经验教训。<br>
 
 <br>
 <b>(2). 有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
@@ -170,7 +170,7 @@ div .block{
 </p>
 </div>
 
-6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不关心的。<br>
+6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不会关心的。<br>
 	所以要齐心协力上热搜，需要持续发帖，持续转发和评论。<br>
 7.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
 <span class=red>雪崩了，没有一片雪花认为自己有责任。</span><br>
@@ -225,11 +225,11 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 84593 times. <br>
+		Viewed 865,326 times. <br>
 		</p>
       </div>
     </footer>
-	  
+
 
 
 
