--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.0.9</title>
+	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.0</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
@@ -33,15 +33,21 @@ div .block{
 }
 
 .quote{font-family:"微软雅黑"; font-size:150%;}
+/*money: yan18224515251*/
 </style>
 </head>
 
 
 <body>
+
+<pre>
+	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
+	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
+</pre>
+
 <p class=t>哀其不幸，怒其不争</p>
 <p class=block>
 	请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
-	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span><br>
 </p>
 
 <span class=red>今天不努力维权，明天活该住在垃圾山上！特别是1-3号楼上的近400户。<br>
@@ -78,7 +84,7 @@ div .block{
 	<li>花钱充个微博会员(非常时刻，别心疼这十几块钱了); </li>
 	<li>多加别人粉丝，让别人也加你; </li>
 	<li>每天发微博或转发热点微博(转发也要评论几句，<span class=red>纯转发被认为没有信息，不会有权重</span>);</li>
-	<li>不要评价政府和领导人，特别是高层;</li> 
+	<li>不要评价党政领导人，特别是高层;</li> 
 </ul>
 
 
@@ -106,6 +112,17 @@ div .block{
 	作业到深夜，噪音污染，<br>
 	这些严重影响小区品味，<br>
 	<span class=red>坐视不管的结果：整个小区住着窝心，卖着贬值；</span><br>
+	
+	
+<ul>
+	<li>微博 美好滁州 7月16日 10:34 #小美发布#</li> 
+	<li><b>【垃圾中转站臭气熏天，周边住户叫苦】</b>
+	昨日上午8时刚过，记者来到位于紫薇小区附近的垃圾中转站，还未走到跟前，便闻到空气中弥漫着阵阵酸臭味。地面上污水横流，让人无处下脚，在经过太阳暴晒后，气味更加刺鼻。现场，七八辆装满垃圾的电动三轮车和一辆大卡车正在排队装卸垃圾。</li>
+	<li class=red>插一句： 小区附近的垃圾中转站都这样有威力，小区内更酸爽！一年到头难以开窗户！</li> 
+    <li>一位路过的居民向记者抱怨道，自从垃圾中转站在这里建起来后，臭气就一直没断过。特别是夏天的时候，气温又高，就更加臭不可闻。再加上一些清运垃圾的车辆还会在这里长时间地停驻，垃圾污水四处流淌，导致附近居民常年都不敢开门窗。采访中，周边居民都盼望相关部门能够及时处理并解决这一问题。</li>
+</ul>	
+	
+	
 2.e户型天然气管道布线有碰头、爆炸风险，万一爆炸紧邻的c户型也可能波及，整个小区都会贬值；<br>
 3.绿化缩水，地砖劣质，没有凉亭等，都造成小区贬值；<br>
 <br>
@@ -150,7 +167,7 @@ div .block{
 3.向媒体寻求帮助，目前还没有媒体写稿件；<br>
 4.请律师，过程漫长，而且被告都很难选定，少不了踢皮球，可以考虑，但是不要指望；<br>
 5.现场维权，<br>
-	(1)第一次是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部很远的地方，<br>
+	<hr>(1)第一次大规模维权是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部很远的地方，<br>
 	现场立刻出现大量保安和警察，业主被抓5人，其余立刻解散。<br>
 	有人推测是假警察，但群里肯定有万科卧底。而且现场业主中也可能有卧底。万科已经开始暴力解决问题了？<br>
 	要好好研究如何营救被抓业主。<br>
@@ -170,6 +187,12 @@ div .block{
 </p>
 </div>
 
+	<hr>(2)第二次大规模维权是2018-7-29: 
+#郑州万科城#今天发生大规模维权，众多业主赶赴#天健湖# 万科售楼部，请求拆除#万科# 五期小区内距楼10米的垃圾中转站（建在郁亮先生#窗外# 10米他愿意吗？这辈子还能开窗户吗？）现场秩序井然，业主们情绪稳定。业主们之前发出合理诉求，但是一直不被万科有效回应，仍继续封闭施工。花了#六个钱包# 购房的业主表示有决心有信心有毅力维权到底，这垃圾中转站一定要拆！此外，#万科城# 还存在燃气管道碰头、软管过长容易爆炸的隐患，小区绿化缩水、地砖降级等问题。目前万科在郑州已经实现期期维权的战绩，而五期貌似踩中很多红线不良因素的坑，而这些当初销售们都轻描淡写，辜负了业主对万科的信任。#爆料# 这也是提醒各位购房者多做比较，不要盲目相信大品牌，理性决策，比如多花一星期研究合同，再决定签不签。#郑州爆料# 大家竞猜一下#万科城湖心岛#会有哪些坑？<br>
+<a target="_blank" href="http://s.weibo.com/weibo/%25E9%2583%2591%25E5%25B7%259E%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E?topnav=1&wvr=6&b=1">郑州万科城 in weibo</a><br>
+	
+
+<br>
 6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不会关心的。<br>
 	所以要齐心协力上热搜，需要持续发帖，持续转发和评论。<br>
 7.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
@@ -225,7 +248,7 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 865,326 times. <br>
+		Viewed 2,357,269 times. <br>
 		</p>
       </div>
     </footer>
