--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ div .block{
 <pre>
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
 	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
+	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
+	<span>维权QQ群：正在申请中。</span>
 </pre>
 
 <p class=t>哀其不幸，怒其不争</p>
