--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.1</title>
+	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.3</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
@@ -43,9 +43,15 @@ div .block{
 <pre>
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
 	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
+<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
 	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
-	<span>维权QQ群：正在申请中。</span>
+	<span>维权QQ群：请等待...</span>
 </pre>
+
+
+
+
+
 
 <p class=t>哀其不幸，怒其不争</p>
 <p class=block>
@@ -250,7 +256,7 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 2,357,269 times. <br>
+		Viewed 8,469,385 times. <br>
 		</p>
       </div>
     </footer>
