--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.3</title>
+	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.4</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
@@ -43,7 +43,7 @@ div .block{
 <pre>
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
 	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
-<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
+	<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
 	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
 	<span>维权QQ群：请等待...</span>
 </pre>
@@ -108,7 +108,7 @@ div .block{
 <div class=block>
 不要被 透明屋/全民好房 的公众号洗脑！请认清现实问题：<br>
 <br>
-各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么激发矛盾，要么总是岔开话题，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
+各种群甚至群主里面都可能有万科奸细，他们要么鼓吹维权很可怕，要么骂人等方法激发矛盾、总是岔开话题，千方百计的阻止大家讨论维权；搞分化，阻止大家去维权。请自行甄别。<br>
 拖延到交房后，是水军们的考核目标。交房后开发商就跑了，业主就是和物业交涉了，斗争会很不直接，更困难！<br>
 </div>
 
@@ -160,6 +160,8 @@ div .block{
 
 <p class=grey>期期维权的#郑州万科城# 终于在7月7号迎来了五期维权，虽然被万科的保安疯狂镇压并抓走几名业主，但还是改变不了#万科# 要在#郑州万科城# 五期小区内建设垃圾中转站的工程进度。期期坑人，你猜猜#郑州# 的#万科城湖心岛# 会怎么玩坑？ ​</p>
 
+<p class=grey>#万科#都能在业主窗外10米建垃圾中转站，还有啥干不出来的？合同欺瞒，早知道买哪不好？小孩子生病，常年恶臭不能开窗户，回家痛苦，租卖都减值，一辈子憋屈，无力吐槽了。相比来看，郑州其他开发商楼盘的问题都是小毛病。媒体还都不敢报道，#郑州万科城# 真是手眼通天，记者纷纷说领导不让过去采访#万科城# 了！！​</p>
+
 <br>
 
 
@@ -172,9 +174,10 @@ div .block{
 <p class=t>解决办法汇总：</p>
 1.直接对话万科，万科给了各种理由，结论是不改；<br>
 2.向政府投诉，目前zf网站要么没回复，要么官话说符合规划云云；<br>
-3.向媒体寻求帮助，目前还没有媒体写稿件；<br>
-4.请律师，过程漫长，而且被告都很难选定，少不了踢皮球，可以考虑，但是不要指望；<br>
-5.现场维权，<br>
+3.向媒体寻求帮助，目前除了 
+<a target="_blank" href="http://s.weibo.com/weibo/%25E9%2583%25BD%25E5%25B8%2582%25E6%258A%25A5%25E9%2581%2593%2520%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">都市报道 无态度的一次曝光</a>，还没有其他媒体写稿；最近维权给记者们打电话，被告知，领导不让去采访万科了；可能被公关；<br>
+4.请律师，过程漫长，而且被告都很难选定，少不了踢皮球；万科法务肯定抠过合同了，且有签字，诉讼角度不好选；可以考虑，但是不要过度指望；<br>
+5.现场维权，天健湖售楼部，政府大门口等，<br>
 	<hr>(1)第一次大规模维权是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部很远的地方，<br>
 	现场立刻出现大量保安和警察，业主被抓5人，其余立刻解散。<br>
 	有人推测是假警察，但群里肯定有万科卧底。而且现场业主中也可能有卧底。万科已经开始暴力解决问题了？<br>
@@ -203,12 +206,13 @@ div .block{
 <br>
 6.自媒体，靠大家发微博。如果不能出现巨量反应问题的铁证，上不了热搜，万科是不会关心的。<br>
 	所以要齐心协力上热搜，需要持续发帖，持续转发和评论。<br>
-7.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
+7.直接强拆了，趁半夜，雇黑铲车直接推倒；<br>
+8.坐等其他业主出面，啥都不做，爱咋滴咋滴。希望这样态度的越少越好！<br>
 <span class=red>雪崩了，没有一片雪花认为自己有责任。</span><br>
 <br>
 
 <div class=block>
-	安居客，链家网，房天下....都发发<br>
+	安居客，房天下，链家网....都发发<br>
 	特别是外地的，力所能及的每天发几个微博，做几个评论，别啥都不干<br>
 	对，为万科做一辈子免费“广告”，每一天！<br>
 </div>
@@ -225,11 +229,11 @@ div .block{
 <p class=t>自媒体宣传目标：</p>
 1.实事求是反映问题;<br>
 2.尽力扩大曝光量;<br>
-3.把问题和万科品牌名直接关联;<br>
+3.把问题和万科品牌名直接关联; 转发、评论万科在全国各地的投诉案例；<br>
 4.最终对新楼盘潜在买家给出万科1-5期期期维权的事实，让购房者参考，<br>
 	站在新买家的角度搜索微博关键词，检查曝光效果；<br>
 	万科宣传啥，我们用啥关键词，死死绑定万科，<span class=red>为万科天天做免费“广告”一辈子！</span><br>
-	和任何正在流行的关键词关联，如#世界杯#<br>
+	和任何正在流行的关键词关联，如#世界杯#, #王石#， #窗外#<br>
 最终达到 垃圾中转站 拆除等效果。否则什么关闭、暂时停用都是骗人的。<br>
 <br>
 
@@ -256,7 +260,7 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 8,469,385 times. <br>
+		Viewed 9,914,830 times. <br>
 		</p>
       </div>
     </footer>
