--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>万科五期维权项目 - RedStone红石传媒研究所 v0.1.4</title>
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.5</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; text-weight:700; background:#ddd;}
@@ -34,6 +34,38 @@ div .block{
 
 .quote{font-family:"微软雅黑"; font-size:150%;}
 /*money: yan18224515251*/
+
+
+.btn {
+    background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAkCAYAAABIdFAMAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHhJREFUeNo8zjsOxCAMBFB/KEAUFFR0Cbng3nQPw68ArZdAlOZppPFIBhH5EAB8b+Tlt9MYQ6i1BuqFaq1CKSVcxZ2Acs6406KUgpt5/LCKuVgz5BDCSb13ZO99ZOdcZGvt4mJjzMVKqcha68iIePB86GAiOv8CDADlIUQBs7MD3wAAAABJRU5ErkJggg%3D%3D") repeat-x scroll 0 0 transparent;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    /*font-size: 15px;*/
+    font-weight: bold;
+    margin-right: 10px; 
+    padding: 5px 12px;
+    text-decoration: none;
+
+    
+	border-radius:10px;
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 10px;
+	
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+}
+.btn:hover {
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyCAYAAACd+7GKAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAClJREFUeNpi/v//vwMTAwPDfzjBgMpFI/7hFSOT9Y8qRuF3JLoHAQIMAHYtMmRA+CugAAAAAElFTkSuQmCC");
+}
+
+.btn.red {    background-color: #FF0000;}/*e62727  E33100  2DAEBF*/
+.btn.blue {    background-color: rgb(41, 129, 228);}
+.btn.green {    background-color: #6ABF4D;}
+
 </style>
 </head>
 
@@ -45,8 +77,40 @@ div .block{
 	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
 	<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
 	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
-	<span>维权QQ群：请等待...</span>
+	<span>维权QQ群：暂无...</span>
 </pre>
+
+
+
+
+
+
+<p class=t>郑州万科城五期维权简史：媒体曝光篇</p>
+<a class="btn red" target="_blank" href="https://m.weibo.cn/1187312474/4261421133253191">2018-7-13 视频 都市报道</a>主流媒体第一次曝光 [第二次]维权 万科城五期垃圾中转站<br>
+
+<a class="btn blue" target="_blank" href="https://m.weibo.cn/2719903083/4267186190682699">2018-7-29 微博视频</a>[第三次]维权 天健湖售楼部现场维权<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/j4fJB4Uuy7lFd6TqpKmNFg">2018-7-30 微信公众号</a>热点】郑州万科城 今天发生大规模维权！！！<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/8LmNJ4jLuEM8f6NC9Y7h-w">2018-8-1 微信公众号</a>震惊|万科在小区内楼旁10米建垃圾中转站，简直谋财害命<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483716&idx=1&sn=236f7ac49f3af6e63c5a2dc5f5eccb60">2018-8-5 微信公众号</a>泪目 | 郑州万科城五期业主雨中的哭诉<br>
+<a class="btn blue" target="_blank" href="https://m.weibo.cn/2138744287/4270368611193696">2018-8-5 微博大号转发</a>郑州万科维权现场一位28岁 万科业主雨中的哭诉（视频已被和谐）<br>
+8-8 万科出了个坑人的退房通知，就是说不能退，退了业主也要额外给万科赔钱。很生气，决定做 万科表情包。<br>
+<a class="btn blue" target="_blank" href="https://m.weibo.cn/5509389351/4271002349666114">2018-8-9 长微博</a>人才能在郑州能留得下吗？至郑州有关领导的一封信。<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUxNDEyNzYwOA==&mid=2247484936&idx=1&sn=df14d4c6102876584bbb44f9edb73f14">2018-8-10 微信公众号</a>郑州万科维权现场一位28岁业主倾心诉求，看的心疼<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/HUx3FLVi-xs2Klbf7FN_eg">2018-8-10 微信公众号</a>郑州万科：请扎根，别扎心！<br>
+
+
+<a class="btn blue" target="_blank" href="https://media.weibo.cn/article?id=2309404271743974930030">2018-8-11 微博文章</a>郁亮，业主送你窗外10米一个垃圾中转站？你经常住哪？（第一批大字宣传画 万科表情包）<br>
+<a class="btn red" target="_blank" href="https://m.weibo.cn/1187312474/4273219811362146">2018-8-15 郑州晚报</a>报道：10号上午，高新区党工委副书记、管委会常务副主任李金勇到垃圾中转站视察，并督促相关方从群众利益出发，加强沟通协调，尽快予以答复解决。<br>
+	<a target="_blank" href="http://zzwb.zynews.cn/html/2018-08/15/node_1035.htm">8-15号的#郑州晚报#G02版 右上"区领导检查问题楼盘"</a> | <a target="_blank" href="http://zzwb.zynews.cn/page/2/2018-08/15/G02/20180815G02_pdf.pdf">pdf</a><br>
+
+
+<a class="btn blue" target="_blank" href="https://m.weibo.cn/1187312474/4272865718864317">2018-8-14 微博</a>13号[第四次]大规模维权 上午市信访局，下午高新区管委会。万科无视昨天政府的调停，继续施工。<br>
+
+<br>
+<br>
+<br>
+
+
 
 
 
@@ -184,23 +248,45 @@ div .block{
 	要好好研究如何营救被抓业主。<br>
 
 
-<div class=block>
-<p class=red><b>(1). 不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
-这是成年人的社会，钱会蔑视和玩弄规则，不要太天真！<br>
-啥都没做jc确实已经抓人了。想想怎么防御吧。<br>
-他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
-这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
-既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要仔细研究，学习其他地市楼盘经验教训。<br>
 
-<br>
-<b>(2). 有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
-笑话！你以为你不说买二手房的就不知道你小区有个垃圾场啊！天真。
-</p>
+
+<hr>
+<div class=block>
+	<p class=red><b>(1). 不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
+	这是成年人的社会，钱会蔑视和玩弄规则，不要太天真！<br>
+	啥都没做jc确实已经抓人了。想想怎么防御吧。<br>
+	他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
+	这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
+	既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要仔细研究，学习其他地市楼盘经验教训。<br>
+
+	<br>
+	<b>(2). 有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
+	笑话！你以为你不说买二手房的就不知道你小区有个垃圾场啊！天真。
+	</p>
 </div>
+
+
+
+
+
 
 	<hr>(2)第二次大规模维权是2018-7-29: 
 #郑州万科城#今天发生大规模维权，众多业主赶赴#天健湖# 万科售楼部，请求拆除#万科# 五期小区内距楼10米的垃圾中转站（建在郁亮先生#窗外# 10米他愿意吗？这辈子还能开窗户吗？）现场秩序井然，业主们情绪稳定。业主们之前发出合理诉求，但是一直不被万科有效回应，仍继续封闭施工。花了#六个钱包# 购房的业主表示有决心有信心有毅力维权到底，这垃圾中转站一定要拆！此外，#万科城# 还存在燃气管道碰头、软管过长容易爆炸的隐患，小区绿化缩水、地砖降级等问题。目前万科在郑州已经实现期期维权的战绩，而五期貌似踩中很多红线不良因素的坑，而这些当初销售们都轻描淡写，辜负了业主对万科的信任。#爆料# 这也是提醒各位购房者多做比较，不要盲目相信大品牌，理性决策，比如多花一星期研究合同，再决定签不签。#郑州爆料# 大家竞猜一下#万科城湖心岛#会有哪些坑？<br>
 <a target="_blank" href="http://s.weibo.com/weibo/%25E9%2583%2591%25E5%25B7%259E%25E4%25B8%2587%25E7%25A7%2591%25E5%259F%258E?topnav=1&wvr=6&b=1">郑州万科城 in weibo</a><br>
+
+
+
+<hr>(3)第三次大规模维权是2018-8-5: 万科售楼部，搜索 万科业主雨中的哭诉，见上文报道专栏。 <br>
+
+
+<hr>(4)第四次大规模维权是2018-8-13（周一）: 上午去市信访局，又被要求回高新区管委会去解决。五方会谈勒令万科垃圾中转站停工，结果次日业主拍到继续施工的照片和录像。万科无视政府调停，继续安装垃圾中转站围栏。<br>
+<br>
+
+<br>
+<br>
+
+
+
 	
 
 <br>
@@ -260,7 +346,7 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 9,914,830 times. <br>
+		Viewed 12,247,163 times. <br>
 		</p>
       </div>
     </footer>
