--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 <head>
-	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.5</title>
+	  <meta charset="utf-8"/>
+	  <meta name="keywords" content="万科城,维权" />
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.6</title>
 <style>
 html,head{margin:0; padding:0;}
-.t{font-size:150%; text-weight:700; background:#ddd;}
+.t{font-size:150%; font-weight:700; background:#ddd;}
 .red{color:red;}
 .text-muted,
 .grey{color:grey;}
@@ -41,17 +43,17 @@ div .block{
     color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
-    /*font-size: 15px;*/
+    font-size: 120%;
     font-weight: bold;
     margin-right: 10px; 
     padding: 5px 12px;
     text-decoration: none;
 
-    
+
 	border-radius:10px;
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 10px;
-	
+
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -71,10 +73,10 @@ div .block{
 
 
 <body>
-
+<!-- a part begins -->
 <pre>
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
-	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史，和做思想辅导。</span>
+	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史。</span>
 	<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
 	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
 	<span>维权QQ群：暂无...</span>
@@ -85,7 +87,11 @@ div .block{
 
 
 
-<p class=t>郑州万科城五期维权简史：媒体曝光篇</p>
+
+
+
+<!-- a part begins -->
+<p class=t>郑州万科城五期维权简史: 媒体曝光简史</p>
 <a class="btn red" target="_blank" href="https://m.weibo.cn/1187312474/4261421133253191">2018-7-13 视频 都市报道</a>主流媒体第一次曝光 [第二次]维权 万科城五期垃圾中转站<br>
 
 <a class="btn blue" target="_blank" href="https://m.weibo.cn/2719903083/4267186190682699">2018-7-29 微博视频</a>[第三次]维权 天健湖售楼部现场维权<br>
@@ -117,6 +123,9 @@ div .block{
 
 
 
+
+
+<!-- a part begins -->
 <p class=t>哀其不幸，怒其不争</p>
 <p class=block>
 	请截图全力扩散到尽量多的群和朋友圈，唤醒邻居们维权意识和维权能力！<br>
@@ -135,6 +144,10 @@ div .block{
 
 
 
+
+
+
+<!-- a part begins -->
 <p class=t>万科城五期维权 - 微博效果</p>
 <p>站在一般民众和买房者的角度，搜微博关键词：
 <a target="_balnk", href="http://s.weibo.com/weibo/%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">万科</a> |
@@ -167,6 +180,10 @@ div .block{
 
 
 
+
+
+
+<!-- a part begins -->
 <p class=t>万科城五期维权原因：</p>
 
 <div class=block>
@@ -206,6 +223,10 @@ div .block{
 
 
 
+
+
+
+<!-- a part begins -->
 <p class=t>微博发帖建议，供参考：</p>
 1.每人一天一条微博，越多人发越好；<br>
 2.实事求是发问题，一个问题一个帖子，不要有字词牵涉政府，好事都是万科在做：<br>
@@ -235,6 +256,11 @@ div .block{
 
 
 
+
+
+
+
+<!-- a part begins -->
 <p class=t>解决办法汇总：</p>
 1.直接对话万科，万科给了各种理由，结论是不改；<br>
 2.向政府投诉，目前zf网站要么没回复，要么官话说符合规划云云；<br>
@@ -248,8 +274,6 @@ div .block{
 	要好好研究如何营救被抓业主。<br>
 
 
-
-
 <hr>
 <div class=block>
 	<p class=red><b>(1). 不要动不动就责问“那些警察懂不懂法吗？怎么敢上来就抓人？”他们真抓了。</b><br>
@@ -258,15 +282,11 @@ div .block{
 	他们跨省抓捕都干，这个算啥？鸿茅药酒事件百度了解一下细节再说。<br>
 	这个社会要是这么正义，警察和政府部门要依法办事了，崔永元还用的着费劲搞舆论战吗？<br>
 	既然不指望什么社会正义，那么结论就是：网上舆论不能不搞！现场维权也不能不搞！但是如何除掉内奸，如何扩大影响力需要仔细研究，学习其他地市楼盘经验教训。<br>
-
 	<br>
 	<b>(2). 有业主担心说万科城五期的坏话，影响以后卖二手房</b><br>
 	笑话！你以为你不说买二手房的就不知道你小区有个垃圾场啊！天真。
 	</p>
 </div>
-
-
-
 
 
 
@@ -312,6 +332,8 @@ div .block{
 
 
 
+
+<!-- a part begins -->
 <p class=t>自媒体宣传目标：</p>
 1.实事求是反映问题;<br>
 2.尽力扩大曝光量;<br>
@@ -322,6 +344,10 @@ div .block{
 	和任何正在流行的关键词关联，如#世界杯#, #王石#， #窗外#<br>
 最终达到 垃圾中转站 拆除等效果。否则什么关闭、暂时停用都是骗人的。<br>
 <br>
+
+
+
+
 
 
 
