--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	  <meta charset="utf-8"/>
 	  <meta name="keywords" content="万科城,维权" />
-	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.6</title>
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.7</title>
 <style>
 html,head{margin:0; padding:0;}
 .t{font-size:150%; font-weight:700; background:#ddd;}
@@ -68,6 +68,12 @@ div .block{
 .btn.blue {    background-color: rgb(41, 129, 228);}
 .btn.green {    background-color: #6ABF4D;}
 
+/*
+高新区领导人：
+王新亭
+赵金勇
+
+*/
 </style>
 </head>
 
@@ -95,6 +101,7 @@ div .block{
 <a class="btn red" target="_blank" href="https://m.weibo.cn/1187312474/4261421133253191">2018-7-13 视频 都市报道</a>主流媒体第一次曝光 [第二次]维权 万科城五期垃圾中转站<br>
 
 <a class="btn blue" target="_blank" href="https://m.weibo.cn/2719903083/4267186190682699">2018-7-29 微博视频</a>[第三次]维权 天健湖售楼部现场维权<br>
+<a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/zzbIWNIJQHHrTuKoJSd_OA">2018-7-29 微信公众号</a>热点】郑州万科城 今天发生大规模维权！！！<br>
 <a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/j4fJB4Uuy7lFd6TqpKmNFg">2018-7-30 微信公众号</a>热点】郑州万科城 今天发生大规模维权！！！<br>
 <a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s/8LmNJ4jLuEM8f6NC9Y7h-w">2018-8-1 微信公众号</a>震惊|万科在小区内楼旁10米建垃圾中转站，简直谋财害命<br>
 <a class="btn green" target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483716&idx=1&sn=236f7ac49f3af6e63c5a2dc5f5eccb60">2018-8-5 微信公众号</a>泪目 | 郑州万科城五期业主雨中的哭诉<br>
@@ -111,6 +118,14 @@ div .block{
 
 
 <a class="btn blue" target="_blank" href="https://m.weibo.cn/1187312474/4272865718864317">2018-8-14 微博</a>13号[第四次]大规模维权 上午市信访局，下午高新区管委会。万科无视昨天政府的调停，继续施工。<br>
+<a class="btn blue" target="_blank" href="https://m.weibo.cn/1187312474/4278259044476150">2018-8-28 微博</a>28号[第五次]大规模维权 01万科不回应垃圾中转站、燃气管道，业主怒砸万科售楼部。<br>
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4278039984566717">[大号] 02郑州万科城五期e户型燃气管道违规，有爆炸隐患。最长的路，是万科的套路。</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4278035093997801">03印了一万块钱的传单</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4277995973224557">04燃气公司不背锅</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4277973194539872">05欺瞒成性的万科</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4277967284631826">06 报信的</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4277965426567045">07 扯皮</a> |
+	<a target="_blank" href="https://m.weibo.cn/1187312474/4277936678699971">08 买臭鸡蛋</a> |
 
 <br>
 <br>
@@ -372,7 +387,7 @@ div .block{
         <p class="text-muted">Copyright © 2009 - 2018 RedStone. All Rights Reserved. <br>
 		本网站由redStone提供技术支持，目前没有建任何群。<br>
 		有任何意见建议和线索请联系 wap314 at 163.com <br>
-		Viewed 12,247,163 times. <br>
+		Viewed 45,670,496 times. <br>
 		</p>
       </div>
     </footer>
