--- a/index.html
+++ b/index.html
@@ -3,90 +3,37 @@
 <head>
 	  <meta charset="utf-8"/>
 	  <meta name="keywords" content="万科城,维权" />
-	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.7</title>
-<style>
-html,head{margin:0; padding:0;}
-.t{font-size:150%; font-weight:700; background:#ddd;}
-.red{color:red;}
-.text-muted,
-.grey{color:grey;}
-li{background:#FFF8DC; padding:3px;}
-ul{border-left:2px solid rgb(255, 235, 142);
-	list-style_type:none;
-	margin:0;
-	padding:0;
-}
-div .block{
-	background:#FFF8DC;
-	padding:5px;
-}
-
-
-.footer {
-    bottom: 0;
-    width: 100%;
-    background-color: #f5f5f5;
-}
-.container {
-    width: auto;
-    max-width: 680px;
-    padding: 15px;
-    text-align: center;
-}
-
-.quote{font-family:"微软雅黑"; font-size:150%;}
-/*money: yan18224515251*/
-
-
-.btn {
-    background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAkCAYAAABIdFAMAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHhJREFUeNo8zjsOxCAMBFB/KEAUFFR0Cbng3nQPw68ArZdAlOZppPFIBhH5EAB8b+Tlt9MYQ6i1BuqFaq1CKSVcxZ2Acs6406KUgpt5/LCKuVgz5BDCSb13ZO99ZOdcZGvt4mJjzMVKqcha68iIePB86GAiOv8CDADlIUQBs7MD3wAAAABJRU5ErkJggg%3D%3D") repeat-x scroll 0 0 transparent;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 120%;
-    font-weight: bold;
-    margin-right: 10px; 
-    padding: 5px 12px;
-    text-decoration: none;
-
-
-	border-radius:10px;
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 10px;
-
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.8</title>
+	<link rel="stylesheet" media="all" href="css/main.css" />
 	
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-}
-.btn:hover {
-    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyCAYAAACd+7GKAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAClJREFUeNpi/v//vwMTAwPDfzjBgMpFI/7hFSOT9Y8qRuF3JLoHAQIMAHYtMmRA+CugAAAAAElFTkSuQmCC");
-}
+	<style>
+	/*
+	高新区领导人：
+	王新亭
+	赵金勇
 
-.btn.red {    background-color: #FF0000;}/*e62727  E33100  2DAEBF*/
-.btn.blue {    background-color: rgb(41, 129, 228);}
-.btn.green {    background-color: #6ABF4D;}
-
-/*
-高新区领导人：
-王新亭
-赵金勇
-
-*/
-</style>
+	*/
+	</style>
 </head>
 
 
 <body>
+<div id="u1">
+	<a class='mnav' target="_blank" href="login.html" name="tj_login">登录</a>
+	<a class='mnav' target="_blank" href="about.html" name="about" class="pf">关于</a>
+</div>
+
+
+
+
 <!-- a part begins -->
 <pre>
 	<span class=grey>本网站随时可能被敌方屏蔽。请截图保存！</span>
-	<span class=grey>为保密，本网站不写未发生的事情，只公示、记录历史。</span>
+	<span class=grey>为保密，本页面不写未发生的事情，只公示、记录历史。</span>
 	<a target="_blank" href="https://mp.weixin.qq.com/s?__biz=MzUzMDc5NDEyOQ==&mid=2247483682&idx=1&sn=ecca40d50504d4b019086a9ea14c1170&chksm=fa4d12dccd3a9bca44aa36ce92e0431168d614dcd34f27e3243255aac96219f3bb442077a2df#rd"><img src="images/weChat20180801.png" height=150></a>
-	<span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
-	<span>维权QQ群：暂无...</span>
 </pre>
+	<!--span>维权微信群：请加微信( 小鱼Baby: yl372018082 ) 验证身份，加群。</span>
+	<span>维权QQ群：暂无...</span-->
 
 
 
@@ -118,6 +65,8 @@ div .block{
 
 
 <a class="btn blue" target="_blank" href="https://m.weibo.cn/1187312474/4272865718864317">2018-8-14 微博</a>13号[第四次]大规模维权 上午市信访局，下午高新区管委会。万科无视昨天政府的调停，继续施工。<br>
+
+
 <a class="btn blue" target="_blank" href="https://m.weibo.cn/1187312474/4278259044476150">2018-8-28 微博</a>28号[第五次]大规模维权 01万科不回应垃圾中转站、燃气管道，业主怒砸万科售楼部。<br>
 	<a target="_blank" href="https://m.weibo.cn/1187312474/4278039984566717">[大号] 02郑州万科城五期e户型燃气管道违规，有爆炸隐患。最长的路，是万科的套路。</a> |
 	<a target="_blank" href="https://m.weibo.cn/1187312474/4278035093997801">03印了一万块钱的传单</a> |
