--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	  <meta charset="utf-8"/>
 	  <meta name="keywords" content="万科城,维权" />
-	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.8</title>
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.9</title>
 	<link rel="stylesheet" media="all" href="css/main.css" />
 	
 	<style>
@@ -227,11 +227,13 @@
 <!-- a part begins -->
 <p class=t>解决办法汇总：</p>
 1.直接对话万科，万科给了各种理由，结论是不改；<br>
-2.向政府投诉，目前zf网站要么没回复，要么官话说符合规划云云；<br>
+2.向政府投诉，目前zf网站要么没回复，要么口头承诺（没人敢相信zf口头的东西，连万科都不理会政府领导对垃圾中转站的勒令停工），要么官话说符合规划云云；<br>
 3.向媒体寻求帮助，目前除了 
-<a target="_blank" href="http://s.weibo.com/weibo/%25E9%2583%25BD%25E5%25B8%2582%25E6%258A%25A5%25E9%2581%2593%2520%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">都市报道 无态度的一次曝光</a>，还没有其他媒体写稿；最近维权给记者们打电话，被告知，领导不让去采访万科了；可能被公关；<br>
+<a target="_blank" href="http://s.weibo.com/weibo/%25E9%2583%25BD%25E5%25B8%2582%25E6%258A%25A5%25E9%2581%2593%2520%25E4%25B8%2587%25E7%25A7%2591?topnav=1&wvr=6&b=1">都市报道 无态度的一次曝光</a>，
+<a target="_blank" href="http://zzwb.zynews.cn/html/2018-08/15/node_1035.htm">8-15号的#郑州晚报#G02版 右上"区领导检查问题楼盘"</a>，
+还没有其他大众媒体报道；最近维权给记者们打电话，被告知，领导不让去采访万科了；可能郑州的媒体都已经被公关；<br>
 4.请律师，过程漫长，而且被告都很难选定，少不了踢皮球；万科法务肯定抠过合同了，且有签字，诉讼角度不好选；可以考虑，但是不要过度指望；<br>
-5.现场维权，天健湖售楼部，政府大门口等，<br>
+5.现场维权，天健湖万科售楼部，高新区管委会，市委，市信访局等，<br>
 	<hr>(1)第一次大规模维权是2018-7-7，知情人士透漏，身穿维权背心的业主刚出现在售楼部很远的地方，<br>
 	现场立刻出现大量保安和警察，业主被抓5人，其余立刻解散。<br>
 	有人推测是假警察，但群里肯定有万科卧底。而且现场业主中也可能有卧底。万科已经开始暴力解决问题了？<br>
@@ -264,8 +266,14 @@
 
 
 <hr>(4)第四次大规模维权是2018-8-13（周一）: 上午去市信访局，又被要求回高新区管委会去解决。五方会谈勒令万科垃圾中转站停工，结果次日业主拍到继续施工的照片和录像。万科无视政府调停，继续安装垃圾中转站围栏。<br>
+
+
+<hr>(5)第五次大规模维权是2018-8-28（周二）: 在<span class=red>第二批交房</span>期间。打印两份宣传单页：垃圾站和燃气管道各一个；易拉宝一个。华润燃气提供了万科盖章的坚持这么设计的“保证书”。
+万科面对维权采取不见面、不回应、不解决。业主怒砸万科天健湖售楼部。<br>
 <br>
 
+
+<br>
 <br>
 <br>
 
