--- a/about.html
+++ b/about.html
@@ -1,2 +1,24 @@
 <meta charset="utf-8"/>
-让事实说话。万科就是垃圾。
+<a href="./">首页</a>
+<div style="margin:5px; padding:5px;">
+<center><b>致万科城五期邻居的一封信</b> <br>
+	——垃圾中转站必除、燃气管道要保证合规安全
+</center><br>
+
+<br>
+亲爱的邻居们：<br>
+<br>
+
+<p>以前的行动你忙、没时间、离得远、不知情，我们理解。所以前期我们去售楼部、市信访局、高新管委会、沟赵办事处，顶着烈日、流着汗，三四十度的高温一站一天，只为维护属于我们的权利；只为有一个可以生活的家；只为有一天面对妻儿子女我们不愧疚、不遗憾。可是我们人少力单，人微言轻，换来的是万科地产人员的冷笑，换来的是政府领导立即停工、永不使用的口头承诺，然而第二天垃圾站的施工现场依旧热火朝天、我行我素！因为我们人少，所以他们直接忽视！！！</p>
+
+<p>前期的邻居一次次的摇旗呐喊、一次次地奔走呼喊，他们很多人是年迈的老人、是待产的妈妈、是刚刚走出校门的学生、是一个个普普通通的上班族，他们不顾烈日、他们不畏炎热、他们一次次的请假，他们就是你我身边那个最可亲、可爱的邻居，他们甚至当面被政府人员警告已经上了高新区派出所的黑名单，可是他们依旧奔走在队伍的最前头，他们依旧扛着旗帜不松手，他们没有任何的政府背景，他们在公司也是业务精英，他们在维权之前也一直是遵纪守法的好公民，他们在父母眼中也是那个听话孝顺的好儿女，他们在以前老师的眼中一直是同学的榜样，他们在咱们五期的7#楼、9#楼、11#楼，离那个垃圾站远之又远，可是他们冲在了第一线，因为他们知道垃圾站、燃气管道的危害，他们没有权衡利弊，他们没有推诿退缩，他们没有找任何理由，他们依然站出来捍卫权利！可是他们人单力薄，他们是万科眼中的“乌合之众”难以掀起一丝风浪，我亲爱的邻居，我们需要你，站出来吧！</p>
+
+<p>我们很多人的一生会过的普普通通、默默无闻，在历史的长河中翻不起一朵浪花，我们做不到富可敌国、权倾天下、名扬四海，甚至走过这个世界，留不下一丝痕迹。但是今天我们要勇敢地站出来，因为有一天，我们面对自己的妻儿、面对自己的子女，我们可以自豪地对他们说，曾经为了我们的家，为了给他们一个健康、安全的成长环境，我们敢于同无良的企业进行不屈不挠的斗争，面对他们我们不愧疚，我们对得起那一声“爸妈”，我们用自己的言行为子女上了一堂人生课，我们无愧自己、更无愧子孙。</p>
+
+<p>这将会是我们五期业主最有机会的一次维权行动，为了这次，我们大家都付出了很大的代价，我们奔走呼喊、我们摇旗助威就是为了一个健康、安心的环境、我希望在这个薄情的世界，能够并肩和一个温情的你同在。邻居，8.27----8.30号，我在万科城五期等你，为自己、为妻儿、为子女、为美好生活，为房子是用来住的！站出来吧！</p>
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;此致</p>
+<p>敬礼</p>
+<p>郑州万科城五期业主筹备委员会</p>
+<p>2018.8.30</p>
+</div>
