--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	  <meta charset="utf-8"/>
 	  <meta name="keywords" content="万科城,维权" />
-	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.9</title>
+	<title>郑州万科城五期维权简史 - RedStone红石传媒研究所 v0.1.10</title>
 	<link rel="stylesheet" media="all" href="css/main.css" />
 	
 	<style>
@@ -19,8 +19,8 @@
 
 <body>
 <div id="u1">
+	<a class='mnav' target="_blank" href="about.html" name="about" class="pf" style="color:red">至五期业主的一封信</a>
 	<a class='mnav' target="_blank" href="login.html" name="tj_login">登录</a>
-	<a class='mnav' target="_blank" href="about.html" name="about" class="pf">关于</a>
 </div>
 
 
